--- a/resources/sass/_homepage.scss
+++ b/resources/sass/_homepage.scss
@@ -9,6 +9,6 @@
 }
 
 .homepage-card-text {
-    @apply .text-xl .tracking-normal .leading-normal;
-    color: #979797;
+    @apply .text-base .tracking-normal .leading-normal .text-grey-dark ;
+    
 }
