--- a/resources/sass/_homepage.scss
+++ b/resources/sass/_homepage.scss
@@ -1,6 +1,6 @@
 .homepage-background {
     background-image: url('../img/background-03.jpg');
-    @apply .bg-no-repeat .bg-cover;
+    @apply .bg-no-repeat .bg-cover .bg-right;
     font-family: "Work Sans", sans-serif;
 }
 
