--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -14,6 +14,11 @@
   @apply .bg-peachy-pink-dark
 }
 
+.button-pink:disabled {
+  @apply .bg-grey;
+  cursor: default;
+}
+
 .button-white {
   @apply .bg-grey-lighter .font-bold .text-black .p-4
 }
