Style Login Modal

--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -7,18 +7,34 @@
 }
 
 .button-pink {
-  @apply .bg-peachy-pink .text-white .font-bold .py-5
+  @apply .bg-peachy-pink .text-white .font-bold .p-4
 }
 
 .button-pink:hover {
   @apply .bg-peachy-pink-dark
 }
 
+.button-pink:disabled {
+  @apply .bg-grey;
+  cursor: default;
+}
+
 .button-white {
-  @apply .bg-grey-lighter .font-bold .text-black .py-5
+  @apply .bg-grey-lighter .font-bold .text-black .p-4
 }
 
 .button-white:hover {
   @apply .bg-grey
 }
 
+.input{
+  @apply .bg-grey-lighter .rounded-full .p-2
+}
+
+.input:focus{
+  @apply .outline-none .border-grey .border-2
+}
+
+.label{
+  @apply .font-semibold .text-sm .text-grey-dark
+}
