--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -38,3 +38,11 @@
 .label {
   @apply .font-semibold .text-sm .text-grey-dark
 }
+
+.textarea {
+  @apply .bg-grey-lighter .rounded-xl .p-2 .resize-none .min-h-48
+}
+
+.textarea:focus {
+  @apply .outline-none .border-grey .border-2
+}
