--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -1,17 +1,17 @@
 .button:focus {
-  @apply .outline-none
+  @apply .outline-none;
 }
 
 .button {
-  @apply .rounded-full
+  @apply .rounded-full;
 }
 
 .button-pink {
-  @apply .bg-peachy-pink .text-white .font-bold .p-4
+  @apply .bg-peachy-pink .text-white .font-bold .p-4;
 }
 
 .button-pink:hover {
-  @apply .bg-peachy-pink-dark
+  @apply .bg-peachy-pink-dark;
 }
 
 .button-pink:disabled {
@@ -20,29 +20,40 @@
 }
 
 .button-white {
-  @apply .bg-grey-lighter .font-bold .text-black .p-4
+  @apply .bg-grey-lighter .font-bold .text-black .p-4;
 }
 
 .button-white:hover {
-  @apply .bg-grey
+  @apply .bg-grey;
 }
 
 .input {
-  @apply .bg-grey-lighter .rounded-full .p-2
+  @apply .bg-grey-lighter .rounded-full .p-2;
 }
 
 .input:focus {
-  @apply .outline-none .border-grey .border-2
+  @apply .outline-none .border-grey .border-2;
 }
 
 .label {
-  @apply .font-semibold .text-sm .text-grey-dark
+  @apply .font-semibold .text-sm .text-grey-dark;
 }
 
 .textarea {
-  @apply .bg-grey-lighter .rounded-xl .p-2 .resize-none .min-h-48
+  @apply .bg-grey-lighter .rounded-xl .p-2 .resize-none .min-h-48;
 }
 
 .textarea:focus {
-  @apply .outline-none .border-grey .border-2
+  @apply .outline-none .border-grey .border-2;
+}
+
+.card {
+  @apply .flex .flex-col .border-2 .border-peachy-pink .rounded-lg .p-4 .mb-4;
+}
+
+.card-title {
+  @apply .text-lg;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
