--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -23,11 +23,11 @@
 }
 
 .button-white:hover, .button-logout:hover {
-  @apply .bg-grey
+  @apply .bg-grey;
 }
 
 .button-logout {
-  @apply .bg-grey-lighter .font-light .text-black .px-4 .py-2 .ml-2
+  @apply .bg-grey-lighter .font-light .text-black .px-4 .py-2 .ml-2;
 }
 
 .input {
