Avatar deletion when users delete their account

--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -22,12 +22,20 @@
   @apply .bg-grey-lighter .font-bold .text-black .p-4;
 }
 
-.button-white:hover, .button-logout:hover {
-  @apply .bg-grey;
+.button-grey {
+  @apply .bg-grey-lighter .font-light .text-black .px-4 .py-2 .ml-2;
 }
 
-.button-logout {
-  @apply .bg-grey-lighter .font-light .text-black .px-4 .py-2 .ml-2;
+.button-white:hover, .button-grey:hover {
+    @apply .bg-grey;
+}
+
+.button-red {
+    @apply .bg-red .font-bold .p-4 .text-white;
+}
+
+.button-red:hover {
+    @apply .bg-red-darker;
 }
 
 .input {
