--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -3,11 +3,11 @@
 }
 
 .button {
-  @apply .rounded-full;
+  @apply .rounded-full .px-8;
 }
 
 .button-pink {
-  @apply .bg-peachy-pink .text-white .font-bold .p-4;
+  @apply .bg-peachy-pink .text-white .font-bold;
 }
 
 .button-pink:hover {
@@ -19,7 +19,7 @@
 }
 
 .button-white {
-  @apply .bg-grey-lighter .font-bold .text-black .p-4;
+  @apply .bg-grey-lighter .font-bold .text-black;
 }
 
 .button-grey {
