Improve error handling on invite and small layout fix

--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -70,3 +70,8 @@
 .card:hover {
   @apply .border-peachy-pink;
 }
+
+.invite-title {
+    @apply .overflow-hidden .whitespace-no-wrap;
+    text-overflow: ellipsis;
+}
