--- a/resources/sass/_homepage.scss
+++ b/resources/sass/_homepage.scss
@@ -1,7 +1,8 @@
 .homepage-background {
-    background-image: url('../img/background-03.jpg');
+    background-image: linear-gradient(180deg, rgba(255, 138, 128, 0.05) 5%, rgba(255, 138, 128, 1) 100%), url('../img/background-03.jpg');
     @apply .bg-no-repeat .bg-cover .bg-right;
     font-family: "Work Sans", sans-serif;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
 }
 
 .homepage-card {
@@ -9,5 +10,5 @@
 }
 
 .homepage-card-text {
-    @apply .text-base .tracking-normal .leading-normal .text-grey-dark ;
+    @apply .text-base .tracking-normal .leading-normal .text-grey-dark;
 }
